--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -191,7 +191,7 @@ button {
         border-left: 0;
     }
     .widget:last-child {
-        padding-top: 0;
+        padding: 0 23px 0 0;
     }
     .menu-item {
         margin: 10px 0;
