--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -348,7 +348,7 @@ p {
 
 /* line 21, ../scss/_navbar.scss */
 .navbar-inverse .navbar-brand {
-  color: #2ea2cc;
+  color: #0074a2;
 }
 
 /* line 25, ../scss/_navbar.scss */
