added margin-top to nav-below .btn

--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -117,6 +117,9 @@
 //  Nav Below
 
 #nav-below {
+    .btn {
+        margin-top: 20px;
+    }
     .btn-primary {
         margin-top: 10px;
     }
