--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -466,22 +466,26 @@ p {
 }
 
 /* line 120, ../scss/_navbar.scss */
+#nav-below .btn {
+  margin-top: 20px;
+}
+/* line 123, ../scss/_navbar.scss */
 #nav-below .btn-primary {
   margin-top: 10px;
 }
 
-/* line 127, ../scss/_navbar.scss */
+/* line 130, ../scss/_navbar.scss */
 .nav-previous {
   float: left;
   margin-right: 10px;
 }
 
-/* line 134, ../scss/_navbar.scss */
+/* line 137, ../scss/_navbar.scss */
 button {
   margin-right: 10px !important;
 }
 
-/* line 137, ../scss/_navbar.scss */
+/* line 140, ../scss/_navbar.scss */
 .btn-primary {
   -webkit-transition: background-color, 0.5s;
   -moz-transition: background-color, 0.5s;
@@ -489,7 +493,7 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 142, ../scss/_navbar.scss */
+/* line 145, ../scss/_navbar.scss */
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
   background-color: #004560;
   border-color: #004560;
@@ -499,7 +503,7 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 148, ../scss/_navbar.scss */
+/* line 151, ../scss/_navbar.scss */
 .btn-danger {
   background-color: #d2322d;
   border-color: #d2322d;
@@ -509,7 +513,7 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 153, ../scss/_navbar.scss */
+/* line 156, ../scss/_navbar.scss */
 .btn-danger:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
   background-color: #711b18;
   border-color: #711b18;
@@ -519,19 +523,19 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 161, ../scss/_navbar.scss */
+/* line 164, ../scss/_navbar.scss */
 .affix {
   top: 0;
 }
 
 @media only all and (max-width: 767px) {
-  /* line 164, ../scss/_navbar.scss */
+  /* line 167, ../scss/_navbar.scss */
   .affix-top {
     position: fixed;
   }
 }
 
-/* line 172, ../scss/_navbar.scss */
+/* line 175, ../scss/_navbar.scss */
 .footer-widgets {
   /* .widget:last-child {
       @include max_tablet {
@@ -539,17 +543,17 @@ button {
       }
   } */
 }
-/* line 173, ../scss/_navbar.scss */
+/* line 176, ../scss/_navbar.scss */
 .footer-widgets .nav {
   margin-top: 0px;
 }
-/* line 177, ../scss/_navbar.scss */
+/* line 180, ../scss/_navbar.scss */
 .footer-widgets .widget {
   border-left: 1px dashed #222;
   padding: 23px;
   margin-top: 30px;
 }
-/* line 182, ../scss/_navbar.scss */
+/* line 185, ../scss/_navbar.scss */
 .footer-widgets .widget h2 {
   font-family: "Dosis", sans-serif !important;
   font-size: 100%;
@@ -558,18 +562,18 @@ button {
   letter-spacing: 3px;
 }
 @media only all and (max-width: 767px) {
-  /* line 177, ../scss/_navbar.scss */
+  /* line 180, ../scss/_navbar.scss */
   .footer-widgets .widget {
     padding: 23px 23px 0 0;
     margin-top: 20px;
     border-left: 0;
   }
 }
-/* line 195, ../scss/_navbar.scss */
+/* line 198, ../scss/_navbar.scss */
 .footer-widgets .widget:first-child {
   border-left: 0;
 }
-/* line 203, ../scss/_navbar.scss */
+/* line 206, ../scss/_navbar.scss */
 .footer-widgets .menu-item {
   margin: 10px 0;
   text-transform: uppercase;
@@ -580,7 +584,7 @@ button {
       }
   } */
 }
-/* line 207, ../scss/_navbar.scss */
+/* line 210, ../scss/_navbar.scss */
 .footer-widgets .menu-item:before {
   margin-left: 10px;
   margin-right: 5px;
@@ -588,39 +592,39 @@ button {
   color: #d2322d;
 }
 
-/* line 222, ../scss/_navbar.scss */
+/* line 225, ../scss/_navbar.scss */
 #calendar_wrap {
   padding: 0;
 }
-/* line 226, ../scss/_navbar.scss */
+/* line 229, ../scss/_navbar.scss */
 #calendar_wrap .table-striped > tbody > tr:nth-child(odd) > td, #calendar_wrap .table-striped > tbody > tr:nth-child(odd) > th {
   background-color: #222;
 }
-/* line 229, ../scss/_navbar.scss */
+/* line 232, ../scss/_navbar.scss */
 #calendar_wrap .table > thead > tr > th, #calendar_wrap .table > tbody > tr > th, #calendar_wrap .table > tfoot > tr > th, #calendar_wrap .table > thead > tr > td, #calendar_wrap .table > tbody > tr > td, #calendar_wrap .table > tfoot > tr > td {
   border-top: 1px solid #444;
 }
-/* line 232, ../scss/_navbar.scss */
+/* line 235, ../scss/_navbar.scss */
 #calendar_wrap caption {
   color: #0074a2;
   margin-bottom: 10px;
 }
 
-/* line 239, ../scss/_navbar.scss */
+/* line 242, ../scss/_navbar.scss */
 #footer-menu li {
   width: 100%;
 }
 
-/* line 243, ../scss/_navbar.scss */
+/* line 246, ../scss/_navbar.scss */
 #root-footer, #footer {
   height: auto;
 }
-/* line 245, ../scss/_navbar.scss */
+/* line 248, ../scss/_navbar.scss */
 #root-footer p, #footer p {
   color: #666;
 }
 
-/* line 249, ../scss/_navbar.scss */
+/* line 252, ../scss/_navbar.scss */
 #footer {
   background-color: #000;
 }
@@ -628,7 +632,7 @@ button {
 /* 
  *  Kebo Tweets
  */
-/* line 262, ../scss/_navbar.scss */
+/* line 265, ../scss/_navbar.scss */
 .kebo-tweets a.kaccount, .kebo-tweets a.kdate {
   font-size: 96% !important;
 }
@@ -636,21 +640,21 @@ button {
 /*  
  *  Mailchimp Email Signup 
  */
-/* line 273, ../scss/_navbar.scss */
+/* line 276, ../scss/_navbar.scss */
 #mc_signup {
   padding: 0 !important;
 }
-/* line 275, ../scss/_navbar.scss */
+/* line 278, ../scss/_navbar.scss */
 #mc_signup .mergeRow {
   display: none !important;
   padding: 0 !important;
 }
-/* line 279, ../scss/_navbar.scss */
+/* line 282, ../scss/_navbar.scss */
 #mc_signup form {
   padding: 0 !important;
 }
 
-/* line 283, ../scss/_navbar.scss */
+/* line 286, ../scss/_navbar.scss */
 #mc_signup_submit {
   margin-top: 0;
   width: 100% !important;
@@ -669,7 +673,7 @@ button {
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
-/* line 293, ../scss/_navbar.scss */
+/* line 296, ../scss/_navbar.scss */
 #mc_signup_submit:hover {
   background-color: #0074a2;
   -webkit-transition: background-color, 0.25s;
@@ -678,12 +682,12 @@ button {
   transition: background-color, 0.25s;
 }
 
-/* line 298, ../scss/_navbar.scss */
+/* line 301, ../scss/_navbar.scss */
 .mc_success_msg {
   color: #0074a2;
 }
 
-/* line 301, ../scss/_navbar.scss */
+/* line 304, ../scss/_navbar.scss */
 #mc_message {
   margin-bottom: 15px;
   margin-top: -2px;
@@ -691,12 +695,12 @@ button {
 
 @media only all and (max-width: 767px) {
   /* Logo */
-  /* line 310, ../scss/_navbar.scss */
+  /* line 313, ../scss/_navbar.scss */
   .navbar-brand {
     padding-left: 15px;
   }
 
-  /* line 313, ../scss/_navbar.scss */
+  /* line 316, ../scss/_navbar.scss */
   .navbar-collapse {
     background-color: #000;
   }
