removed right margin widgets below tablet

--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -190,7 +190,7 @@ button {
             letter-spacing: 3px;
         }
         @include max_tablet {
-            padding: 23px 23px 0 0;
+            padding: 23px 0 0 0;
             margin-top: 20px;
             border-left: 0;
         }
