--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -556,7 +556,7 @@ button {
 @media only all and (max-width: 767px) {
   /* line 180, ../scss/_navbar.scss */
   .footer-widgets .widget {
-    padding: 23px 23px 0 0;
+    padding: 23px 0 0 0;
     margin-top: 20px;
     border-left: 0;
   }
