--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -294,7 +294,7 @@ button {
     @include border-radius(2px);
     @include transition(background-color, 0.25s);
     &:hover {
-        background-color: $blue;
+        background-color: darken($red, 23%);
         @include transition(background-color, 0.25s);
     }
 }
