--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -47,7 +47,7 @@
         padding: 15px 6px 15px;
     }
     @include max_tablet{
-        padding: 0 0 15px 51px;
+        padding: 0 0 15px 15px;
     }
     &:hover,
     &:focus {
@@ -63,7 +63,7 @@
  */
 
 .navbar {
-    margin-bottom: -150px;
+    // margin-bottom: -150px;
     font-family: "Dosis", sans-serif;
     text-transform: uppercase;
 
@@ -135,7 +135,7 @@
 //  Buttons
 
 button {
-    margin-right: 10px !important;
+    margin-right: 15px !important;
 }
 .btn-primary {
     // background-color: $red;
@@ -163,10 +163,13 @@ button {
 
 .affix {
     top: 0;
+    @include max_tablet {
+        position: static;
+    }
 }
 .affix-top {
     @include max_tablet {
-        position: fixed;
+        position: static;
     }
 }
 
@@ -180,18 +183,18 @@ button {
     .widget {
         // background-color: #222;
         border-left: 1px dashed #222;
-        padding: 23px;
+        padding: 0 23px;
         margin-top: 30px;
         h2 {
             font-family: "Dosis", sans-serif !important;
-            font-size: 100%;
+            font-size: 110%;
             color: white;
             margin-bottom: 20px;
             letter-spacing: 3px;
         }
         @include max_tablet {
-            padding: 23px 0 0 0;
-            margin-top: 20px;
+            padding: 0;
+            margin-top: 30px;
             border-left: 0;
         }
     }
@@ -203,9 +206,16 @@ button {
             padding: 0;
         }
     }
+
+    ul {
+        padding: 0;
+        list-style: none;
+        list-style-type: none;
+    }
     .menu-item {
-        margin: 10px 0;
+        margin: 3px 0;
         text-transform: uppercase;
+        font-size: 115%;
 
         &:before {
             margin-left: 10px;
