--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -34,6 +34,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Raleway Dots", sans-serif;
     text-transform: uppercase;
     color: white;
+    margin-top: 0;
     span{
         color: #ccc;
     }
