--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -204,6 +204,7 @@ button {
     .widget:last-child {
         @include max_tablet {
             padding: 0;
+            margin-top: 0;
         }
     }
 
