--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -510,15 +510,16 @@ button {
   /* line 204, ../scss/_navbar.scss */
   .footer-widgets .widget:last-child {
     padding: 0;
+    margin-top: 0;
   }
 }
-/* line 210, ../scss/_navbar.scss */
+/* line 211, ../scss/_navbar.scss */
 .footer-widgets ul {
   padding: 0;
   list-style: none;
   list-style-type: none;
 }
-/* line 215, ../scss/_navbar.scss */
+/* line 216, ../scss/_navbar.scss */
 .footer-widgets .menu-item {
   margin: 3px 0;
   text-transform: uppercase;
@@ -530,7 +531,7 @@ button {
       }
   } */
 }
-/* line 220, ../scss/_navbar.scss */
+/* line 221, ../scss/_navbar.scss */
 .footer-widgets .menu-item:before {
   margin-left: 10px;
   margin-right: 5px;
@@ -538,39 +539,39 @@ button {
   color: #d2322d;
 }
 
-/* line 235, ../scss/_navbar.scss */
+/* line 236, ../scss/_navbar.scss */
 #calendar_wrap {
   padding: 0;
 }
-/* line 239, ../scss/_navbar.scss */
+/* line 240, ../scss/_navbar.scss */
 #calendar_wrap .table-striped > tbody > tr:nth-child(odd) > td, #calendar_wrap .table-striped > tbody > tr:nth-child(odd) > th {
   background-color: #222;
 }
-/* line 242, ../scss/_navbar.scss */
+/* line 243, ../scss/_navbar.scss */
 #calendar_wrap .table > thead > tr > th, #calendar_wrap .table > tbody > tr > th, #calendar_wrap .table > tfoot > tr > th, #calendar_wrap .table > thead > tr > td, #calendar_wrap .table > tbody > tr > td, #calendar_wrap .table > tfoot > tr > td {
   border-top: 1px solid #444;
 }
-/* line 245, ../scss/_navbar.scss */
+/* line 246, ../scss/_navbar.scss */
 #calendar_wrap caption {
   color: #0074a2;
   margin-bottom: 10px;
 }
 
-/* line 252, ../scss/_navbar.scss */
+/* line 253, ../scss/_navbar.scss */
 #footer-menu li {
   width: 100%;
 }
 
-/* line 256, ../scss/_navbar.scss */
+/* line 257, ../scss/_navbar.scss */
 #root-footer, #footer {
   height: auto;
 }
-/* line 258, ../scss/_navbar.scss */
+/* line 259, ../scss/_navbar.scss */
 #root-footer p, #footer p {
   color: #666;
 }
 
-/* line 262, ../scss/_navbar.scss */
+/* line 263, ../scss/_navbar.scss */
 #footer {
   background-color: #000;
 }
@@ -578,7 +579,7 @@ button {
 /* 
  *  Kebo Tweets
  */
-/* line 275, ../scss/_navbar.scss */
+/* line 276, ../scss/_navbar.scss */
 .kebo-tweets a.kaccount, .kebo-tweets a.kdate {
   font-size: 96% !important;
 }
@@ -586,21 +587,21 @@ button {
 /*  
  *  Mailchimp Email Signup 
  */
-/* line 286, ../scss/_navbar.scss */
+/* line 287, ../scss/_navbar.scss */
 #mc_signup {
   padding: 0 !important;
 }
-/* line 288, ../scss/_navbar.scss */
+/* line 289, ../scss/_navbar.scss */
 #mc_signup .mergeRow {
   display: none !important;
   padding: 0 !important;
 }
-/* line 292, ../scss/_navbar.scss */
+/* line 293, ../scss/_navbar.scss */
 #mc_signup form {
   padding: 0 !important;
 }
 
-/* line 296, ../scss/_navbar.scss */
+/* line 297, ../scss/_navbar.scss */
 #mc_signup_submit {
   margin-top: 0;
   width: 100% !important;
@@ -619,7 +620,7 @@ button {
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
-/* line 306, ../scss/_navbar.scss */
+/* line 307, ../scss/_navbar.scss */
 #mc_signup_submit:hover {
   background-color: #711b18;
   -webkit-transition: background-color, 0.25s;
@@ -628,12 +629,12 @@ button {
   transition: background-color, 0.25s;
 }
 
-/* line 311, ../scss/_navbar.scss */
+/* line 312, ../scss/_navbar.scss */
 .mc_success_msg {
   color: #0074a2;
 }
 
-/* line 314, ../scss/_navbar.scss */
+/* line 315, ../scss/_navbar.scss */
 #mc_message {
   margin-bottom: 15px;
   margin-top: -2px;
@@ -641,12 +642,12 @@ button {
 
 @media only all and (max-width: 767px) {
   /* Logo */
-  /* line 323, ../scss/_navbar.scss */
+  /* line 324, ../scss/_navbar.scss */
   .navbar-brand {
     padding-left: 15px;
   }
 
-  /* line 326, ../scss/_navbar.scss */
+  /* line 327, ../scss/_navbar.scss */
   .navbar-collapse {
     background-color: #000;
   }
