--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -991,7 +991,7 @@ body {
   padding: 0;
   overflow-x: hidden;
   background-color: #333;
-  background: url('/wp-content/themes/jn-wpbs/assets/img/bg/stripes.png?1385804855') black fixed;
+  background: url('/wp-content/themes/jn-wpbs/assets/img/bg/goth.jpg?1387464063') black fixed;
 }
 
 /* line 23, ../scss/custom.scss */
